# lime-comb

./: .gitignore  .remarkrc.js  LICENSE  Makefile  README.md  codecov.yml  common.mk
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: label.yml  test_cli.yml
api/: .coverage  .gcloudignore  .gitignore  app.py  auth.py  cloudbuild.yaml  data.py  database.py  main.py  pyproject.toml  requirements.txt  schema.py
api/lime_comb_api/: auth.py  database.py  schema.py
api/tests/: conftest.py  test_auth.py  test_firestore.py
cli/: .coverage  .gitignore  Dockerfile.builder  Makefile  README.md  a.txt  ala.txt  ala2.txt  cloudbuild.yaml  coverage.xml  main.py  package-lock.json  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt
cli/cli/: __init__.py  auth.py  firestore.py  gpg.py
cli/cli/auth/: __init__.py
cli/cli/auth/google/: __init__.py
cli/cli/commands/: base.py  common.py  decrypt.py  encrypt.py  keys.py
cli/cli/config/: __init__.py
cli/cli/firestore/: database.py  fetch.py
cli/cli/gpg/: __init__.py
cli/cli/logger/: logger.py
cli/lime_comb/: __init__.py  api.py  config.py  main.py
cli/lime_comb/auth/: google.py
cli/lime_comb/auth/google/: __init__.py
cli/lime_comb/commands/: base.py  common.py  config.py  decrypt.py  encrypt.py  keys.py
cli/lime_comb/config/: __init__.py
cli/lime_comb/firestore/: database.py
cli/lime_comb/gpg/: __init__.py
cli/lime_comb/logger/: logger.py
cli/lime_comb/validators/: bool.py  email.py  file.py
cli/lime_comb_cli/: __init__.py  main.py
cli/lime_comb_cli/auth/google/: __init__.py
cli/lime_comb_cli/commands/: base.py  common.py  decrypt.py  encrypt.py  keys.py
cli/lime_comb_cli/config/: __init__.py
cli/lime_comb_cli/firestore/: database.py
cli/lime_comb_cli/gpg/: __init__.py
cli/lime_comb_cli/logger/: logger.py
cli/tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_firestore.py  test_gpg.py  test_main.py  test_pkg.py  test_validators.py
core/: cloudbuild.yaml  firebase.json  firestore.rules
infra/: .gitignore  Pulumi.master.yaml  Pulumi.yaml  __main__.py  cloudbuild.yaml  requirements.txt
infra/ovh/: __provider.tf  main.tf
infra/ovh/.terraform/plugins/linux_amd64/: lock.json
lambda/: cloudbuild.yaml
web/: .firebaserc  README.md  cloudbuild.yaml  firebase.json  firestore-test.rules  firestore.rules  index.html
web/public/: _client-lime-comb.json  app.js  index.html
