[tool.poetry]
name = "api"
version = "0.0.0"
description = "lime comb api"
authors = ["Marcin Niemira <marcin.niemira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0.1"
graphene = "^2.1.8"
flask_graphql = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
