[tool.poetry]
name = "api"
version = "0.0.0"
description = "lime comb api"
authors = ["Marcin Niemira <marcin.niemira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0.1"
graphene = "^2.1.8"
flask_graphql = "^2.0.1"
google-cloud-profiler = "^1.0.9"
google-python-cloud-debugger = "^2.14"
google-auth = "^1.11.3"
google-cloud-firestore = "1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
