[tool.poetry]
name = "cli"
version = "0.1.0"
description = "lime-comb cli"
authors = ["Marcin Niemira <marcin.niemira@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
google-auth = "^1.10.0"
requests_oauthlib = "^1.3.0"
google-auth-oauthlib = "^0.4.1"
black = "^19.10b0"
firebase_admin = "^3.2.1"
tqdm = "^4.41.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
