[tool.poetry]
name = "cli"
version = "0.0.0"
description = "lime-comb cli"
authors = ["Marcin Niemira <marcin.niemira@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.5"
google-auth = "^1.10.0"
requests_oauthlib = "^1.3.0"
google-auth-oauthlib = "^0.4.1"
black = "^19.10b0"
tqdm = "^4.41.1"
email_validator = "^1.0.5"
grpcio-gcp = "^0.2.2"
google-cloud-firestore = "^1.6.1"
python-gnupg = "^0.4.5"
appdirs = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pylint = "^2.4.4"
black = "^19.10b0"
isort = "^4.3.21"
bandit = "^1.6.2"
codecov = "^2.0.15"
pytest-cov = "^2.8.1"
rope = "^0.14.0"
pytest-mock = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
