[tool.poetry]
name = "lime_comb"
version = "0.0.15"
description = "lime-comb cli"
authors = ["Marcin Niemira <marcin.niemira@gmail.com>"]
readme = 'README.md'
include = ["client-lime-comb.json"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/n0npax/lime-comb"
repository = "https://github.com/n0npax/lime-comb"
homepage = "https://lime-comb.web.app/"
documentation = "https://github.com/n0npax/lime-comb"

[tool.poetry.scripts]
lime-comb = "lime_comb.main:run"


[tool.poetry.dependencies]
python = "^3.7"
google-auth = "^1.10.0"
requests_oauthlib = "^1.3.0"
google-auth-oauthlib = "^0.4.1"
black = "^19.10b0"
tqdm = "^4.41.1"
email_validator = "^1.0.5"
grpcio-gcp = "^0.2.2"
google-cloud-firestore = "^1.6.1"
python-gnupg = "^0.4.5"
appdirs = "^1.4.3"
email-validator = "^1.0.5"
google-cloud-datastore = "^1.10.0"
pyperclip = "^1.7.0"
mock-firestore = "^0.6.0"
tabulate = "^0.8.6"
mock = "^4.0.1"
semver = "^2.9.1"
requests = "^2.23.0"
requests_mock = "^1.7.0"
password_generator = "^0.1.0"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pylint = "^2.4.4"
black = "^19.10b0"
isort = "^4.3.21"
bandit = "^1.6.2"
codecov = "^2.0.15"
pytest-cov = "^2.8.1"
rope = "^0.14.0"
pytest-mock = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
